--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body,
   height: 100%;
 }
 
+body {
+  @apply text-white bg-pink-600;
+}
+
 .bg-discord {
   background-color: var(--discord-blue);
 }
